--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@hebcal/core": "^6.0.8",
     "@instantdb/admin": "latest",
     "@instantdb/react-native": "latest",
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -19,6 +20,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "adhan": "^4.4.3",
     "expo": "~54.0.8",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
@@ -26,7 +28,9 @@
     "expo-image": "~3.0.8",
     "expo-linear-gradient": "^15.0.8",
     "expo-linking": "~8.0.8",
+    "expo-location": "^19.0.8",
     "expo-router": "~6.0.6",
+    "expo-sensors": "^15.0.8",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
